test/test_units/test_kclvm/test_types/invalid_test_data/type_annotation/type_annotation_2.k
schema Data:
    id?: int

schema Person:
    data: Data
    name: a = 1

a: int = 1

person = Person {}
